feat: configure deletion by user
application can specify whether
user is supposed to be able to
delete an endpoint from UI or not
